# studying

Block11/ceasar/: CMakeLists.txt  main.cpp
Block11/emailcheck/: CMakeLists.txt  main.cpp
Block11/ipcheck/: CMakeLists.txt  main.cpp
Block11/noughts-and-crosses/: CMakeLists.txt  main.cpp
Block11/numbers-comparison/: CMakeLists.txt  main.cpp
Block12/apartment-house/: CMakeLists.txt  main.cpp
Block12/float-sort/: CMakeLists.txt  main.cpp
Block12/numbers-row/: CMakeLists.txt  main.cpp
Block13/task-1/: main.cpp
Block13/task-2/: main.cpp
Block13/task-3/: main.cpp
Block14/1-banquet/: CMakeLists.txt  main.cpp
Block14/2-tictactoe/: CMakeLists.txt  main.cpp
Block14/3-snake-path/: CMakeLists.txt  main.cpp
Block14/4-matrices-equality/: CMakeLists.txt  main.cpp
Block14/5-diag-matrix/: CMakeLists.txt  main.cpp
Block14/6-matrix-x-vec/: CMakeLists.txt  main.cpp
Block14/6-vec-x-matrix/: main.cpp
Block14/7-bubble-wrap/: CMakeLists.txt  main.cpp
Block14/8-almost-minecraft/: CMakeLists.txt  main.cpp
Block14/9-sea-battle/: CMakeLists.txt  main.cpp
Block15/task-1/: main.cpp
Block15/task-2/: main.cpp
Block15/task-3/: main.cpp
Block15/task-4/: main.cpp
Block16/1-speedometer/: CMakeLists.txt  main.cpp
Block16/2-double-from-parts/: CMakeLists.txt  main.cpp
Block16/3-calculator/: CMakeLists.txt  main.cpp
Block16/4-piano/: CMakeLists.txt  main.cpp
Block16/5-smart-home/: CMakeLists.txt  main.cpp
Block17/Task-1/: CMakeLists.txt  main.cpp
Block25/task-2-pc-simulator/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
(+112 files in other folders)
